cmake_minimum_required(VERSION 3.20)

project(WebAssembly2)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind -s FETCH=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ERROR_ON_UNDEFINED_SYMBOLS=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s FORCE_FILESYSTEM=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ALLOW_MEMORY_GROWTH=1")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --no-heap-copy")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s TOTAL_MEMORY=200MB")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s -s FULL_ES2=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s MAX_WEBGL_VERSION=2")
set(CMAKE_INSTALL_PREFIX "C:/WebAssembly/WebGL_C-_base/bin" CACHE PATH "")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap','UTF8ToString','stringToUTF16']")


set(SRCS 
    src/main.cpp
    src/func.cpp)

set(HEADERS
    src/func.h)

add_executable(webglonly ${SRCS} ${HEADERS} ${RESSOURCES})

install (TARGETS webglonly DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/webglonly.wasm DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES index.html DESTINATION ${CMAKE_INSTALL_PREFIX})
